# untitled-bevy-game

./: .fiveserverrc  .gitignore  Cargo.toml  README.md  edited_config.yml  sample.yml  sample2.yml
.cargo/: config.toml
.trunk/: trunk.yaml
docs/: Game Systems.md
docs/Backend Design/: Data-Ingest.md  README.md
docs/Game Systems/: Classes.md  Leveling.md  Magic.md  README.md  Skills.md
ingest_test/: sample.yml  sample2.yml
src/: main.rs
src/systems/: define_ingest_files.rs  ingest_file_util.rs  ingest_files.rs  mod.rs
