[package]
name = "untitled-bevy-game"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Westerhausen <nwesterhausen@gmail.com>"]
description = "An as-of-yet untitled game written with Bevy in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
bevy = {version = "0.8.1"}
rusqlite = { version = "0.28.0", features = ["bundled"] }
walkdir = "2.3.2"

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
