[package]
name = "untitled-bevy-game"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Westerhausen <nwesterhausen@gmail.com>"]
description = "An as-of-yet untitled game written with Bevy in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"
bevy = {version = "0.9"}
rusqlite = { version = "0.32.0", features = ["bundled","chrono"] }
walkdir = "2.3.2"
bevy-inspector-egui = "0.14"
chrono = "0.4"


